--- a/ai_service/pyproject.toml
+++ b/ai_service/pyproject.toml
@@ -5,15 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "chromadb>=1.5.1",
     "dashscope>=1.25.12",
     "fastapi>=0.129.2",
     "joblib>=1.5.3",
+    "openpyxl>=3.1.5",
     "pandas>=3.0.1",
     "pymysql>=1.1.2",
+    "qdrant-client>=1.12.2",
     "python-multipart>=0.0.22",
     "scikit-learn>=1.8.0",
     "sqlalchemy>=2.0.46",
     "tensorflow>=2.20.0",
     "uvicorn>=0.41.0",
+    "xlrd>=2.0.1",
 ]
