--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -6,3 +6,6 @@ VITE_APP_ENV = 'development'
 
 # 若依管理系统/开发环境
 VITE_APP_BASE_API = '/dev-api'
+
+# AI 服务地址（RAG/预测/AI批改）
+VITE_AI_BASE_API = 'http://127.0.0.1:8000'
