--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,5 +7,8 @@ VITE_APP_ENV = 'production'
 # 若依管理系统/生产环境
 VITE_APP_BASE_API = '/prod-api'
 
+# AI 服务地址（RAG/预测/AI批改）
+VITE_AI_BASE_API = 'http://127.0.0.1:8000'
+
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS = gzip
